[package]
name = "rarreg"
version = "1.0.0"
edition = "2018"
repository = "https://github.com/GreenYun/rarreg"
license = "MIT OR Apache-2.0"


[dependencies]
arrayvec = "0.7.1"
crc32fast = "1.2.1"
lazy_static = "1.4.0"
num-bigint = { version = "0.4.0", features = ["rand"] }
rand = "0.8.4"
sha-1 = "0.9.6"

[profile.test]
opt-level = 3
