[package]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "rarreg"
repository = "https://github.com/GreenYun/rarreg"
version = "1.1.0"

[dependencies]
arrayvec = "0.7"
crc32fast = "1"
lazy_static = "1"
num-bigint = {version = "0.4", features = ["rand"]}
rand = "0.8"
sha-1 = "0.10"

[profile.release]
lto = true
panic = "abort"

[profile.test]
opt-level = 3
